--- a/notebooks/01_data_simulation.ipynb
+++ b/notebooks/01_data_simulation.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6e9961b1",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base dir: C:\\Users\\newma\\Desktop\\Crew_Size_and_Hrs_predcition\\notebooks\n",
-      "Data dir: C:\\Users\\newma\\Desktop\\Crew_Size_and_Hrs_predcition\\notebooks\\data\n"
+      "Base dir: C:\\Users\\newma\\Desktop\\Crew_Size_and_Hrs_predcition\n",
+      "Data dir: C:\\Users\\newma\\Desktop\\Crew_Size_and_Hrs_predcition\\data\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "BASE_DIR = Path(\".\").resolve()\n",
+    "BASE_DIR = Path(\"..\").resolve()\n",
     "DATA_DIR = BASE_DIR / \"data\"\n",
     "\n",
     "DATA_DIR.mkdir(parents=True, exist_ok=True)\n",
@@ -59,15 +59,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b595d362",
    "metadata": {},
    "outputs": [],
    "source": [
     "def simulate_crew_hours_data(n_samples: int=5000,random_state: int=42)->pd.DataFrame:\n",
-    "    rng=np.randome.default_rng(random_state)\n",
-    "    job_size_sqqft=rng.integers(300,3500,size=n_samples)\n",
-    "    nm_rooms=np.clip"
+    "    rng=np.random.default_rng(random_state)\n",
+    "    # job size and rooms\n",
+    "    job_size_sqft=rng.integers(300,3500,size=n_samples)\n",
+    "    # number of rooms\n",
+    "    num_rooms=np.clip((job_size_sqft/350+rng.normal(0,1,size=n_samples)).round().astype(int),1,8)\n",
+    "\n",
+    "    num_heavy_items=np.clip(rng.poisson(lam=num_rooms*0.8),0,30)\n",
+    "\n",
+    "    num_light_items=np.clip(rng.poisson(lam=num_rooms*4.0),5,200)\n",
+    "\n",
+    "    # distance\n",
+    "    distance_km = rng.gamma(shape=2.0, scale=5.0, size=n_samples)\n",
+    "    distance_km = np.clip(distance_km, 1, 80)\n",
+    "\n",
+    "# building info\n",
+    "    floor_number = rng.integers(0, 12, size=n_samples)\n",
+    "    prob_elevator = np.clip(0.1 + floor_number * 0.08, 0, 0.95)\n",
+    "    has_elevator = rng.binomial(1, prob_elevator).astype(bool)\n",
+    "\n",
+    "    # latent complexity\n",
+    "    complexity = (\n",
+    "        0.0015 * job_size_sqft\n",
+    "        + 0.6 * num_rooms\n",
+    "        + 0.7 * num_heavy_items\n",
+    "        + 0.1 * num_light_items\n",
+    "        + 0.5 * np.maximum(floor_number - 2, 0)\n",
+    "        + 0.2 * distance_km\n",
+    "        - 2.0 * has_elevator.astype(int)\n",
+    "    )\n",
+    "\n",
+    "    # crew size\n",
+    "    raw_crew = 1.5 + 0.015 * complexity + rng.normal(0, 0.7, size=n_samples)\n",
+    "    crew_size_true = np.clip(raw_crew.round(), 2, 8).astype(int)\n",
+    "\n",
+    "    # hours\n",
+    "    raw_hours = 1.5 + 0.05 * complexity + rng.normal(0, 1.5, size=n_samples)\n",
+    "    hours_true = np.clip(raw_hours, 2, 16)\n",
+    "\n",
+    "    # past averages\n",
+    "    past_avg_hours = np.clip(\n",
+    "        hours_true + rng.normal(0, 1.0, size=n_samples),\n",
+    "        1.5,\n",
+    "        18\n",
+    "    )\n",
+    "\n",
+    "    past_avg_crew_size = np.clip(\n",
+    "        crew_size_true + rng.normal(0, 0.5, size=n_samples),\n",
+    "        1,\n",
+    "        10\n",
+    "    )\n",
+    "\n",
+    "    df = pd.DataFrame({\n",
+    "        \"job_size_sqft\": job_size_sqft,\n",
+    "        \"num_rooms\": num_rooms,\n",
+    "        \"num_heavy_items\": num_heavy_items,\n",
+    "        \"num_light_items\": num_light_items,\n",
+    "        \"distance_km\": distance_km,\n",
+    "        \"floor_number\": floor_number,\n",
+    "        \"has_elevator\": has_elevator,\n",
+    "        \"past_avg_hours\": past_avg_hours,\n",
+    "        \"past_avg_crew_size\": past_avg_crew_size,\n",
+    "        \"crew_size\": crew_size_true,\n",
+    "        \"hours_required\": hours_true,\n",
+    "    })\n",
+    "\n",
+    "    return df\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f7bbe6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   job_size_sqft  num_rooms  num_heavy_items  num_light_items  distance_km  \\\n",
+      "0            585          1                2                5    10.779912   \n",
+      "1           2776          7                0               23    11.234749   \n",
+      "2           2394          8                6               39     5.536778   \n",
+      "3           1704          6                3               29    10.749851   \n",
+      "4           1685          4                4                9    17.881982   \n",
+      "\n",
+      "   floor_number  has_elevator  past_avg_hours  past_avg_crew_size  crew_size  \\\n",
+      "0             9          True        3.672054            1.508863          2   \n",
+      "1             5         False        4.972496            2.442126          2   \n",
+      "2             5          True        2.652201            2.849331          2   \n",
+      "3             0         False        2.855227            1.989930          2   \n",
+      "4             7          True        2.929107            1.860670          2   \n",
+      "\n",
+      "   hours_required  \n",
+      "0        2.000000  \n",
+      "1        5.839582  \n",
+      "2        2.089830  \n",
+      "3        2.000000  \n",
+      "4        2.441065  \n",
+      "        job_size_sqft    num_rooms  num_heavy_items  num_light_items  \\\n",
+      "count     5000.000000  5000.000000       5000.00000       5000.00000   \n",
+      "unique            NaN          NaN              NaN              NaN   \n",
+      "top               NaN          NaN              NaN              NaN   \n",
+      "freq              NaN          NaN              NaN              NaN   \n",
+      "mean      1895.171800     5.185400          4.18600         20.91600   \n",
+      "std        926.181434     2.392859          2.80203         10.37345   \n",
+      "min        301.000000     1.000000          0.00000          5.00000   \n",
+      "25%       1089.750000     3.000000          2.00000         12.00000   \n",
+      "50%       1881.000000     5.000000          4.00000         21.00000   \n",
+      "75%       2705.250000     8.000000          6.00000         29.00000   \n",
+      "max       3499.000000     8.000000         16.00000         48.00000   \n",
+      "\n",
+      "        distance_km  floor_number has_elevator  past_avg_hours  \\\n",
+      "count   5000.000000   5000.000000         5000     5000.000000   \n",
+      "unique          NaN           NaN            2             NaN   \n",
+      "top             NaN           NaN         True             NaN   \n",
+      "freq            NaN           NaN         2651             NaN   \n",
+      "mean       9.891978      5.533800          NaN        2.808099   \n",
+      "std        6.998645      3.456363          NaN        1.231391   \n",
+      "min        1.000000      0.000000          NaN        1.500000   \n",
+      "25%        4.791395      3.000000          NaN        1.710818   \n",
+      "50%        8.327805      6.000000          NaN        2.557829   \n",
+      "75%       13.239969      8.000000          NaN        3.543976   \n",
+      "max       75.062738     11.000000          NaN        8.692903   \n",
+      "\n",
+      "        past_avg_crew_size   crew_size  hours_required  \n",
+      "count          5000.000000  5000.00000     5000.000000  \n",
+      "unique                 NaN         NaN             NaN  \n",
+      "top                    NaN         NaN             NaN  \n",
+      "freq                   NaN         NaN             NaN  \n",
+      "mean              2.139564     2.13780        2.706021  \n",
+      "std               0.614595     0.36337        0.957701  \n",
+      "min               1.000000     2.00000        2.000000  \n",
+      "25%               1.716945     2.00000        2.000000  \n",
+      "50%               2.073190     2.00000        2.167697  \n",
+      "75%               2.493988     2.00000        3.224983  \n",
+      "max               5.000041     5.00000        6.989687  \n",
+      "Saved dataset to: C:\\Users\\newma\\Desktop\\Crew_Size_and_Hrs_predcition\\data\\crew_hours_synthetic.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CELL 3: generate and save data\n",
+    "\n",
+    "df = simulate_crew_hours_data(n_samples=5000, random_state=42)\n",
+    "\n",
+    "print(df.head())\n",
+    "print(df.describe(include=\"all\"))\n",
+    "\n",
+    "csv_path = DATA_DIR / \"crew_hours_synthetic.csv\"\n",
+    "df.to_csv(csv_path, index=False)\n",
+    "print(\"Saved dataset to:\", csv_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4bfe5979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((4000, 9), (1000, 9), (4000, 2), (1000, 2))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# CELL 4: basic preprocessing and train test split\n",
+    "\n",
+    "feature_cols = [\n",
+    "    \"job_size_sqft\",\n",
+    "    \"num_rooms\",\n",
+    "    \"num_heavy_items\",\n",
+    "    \"num_light_items\",\n",
+    "    \"distance_km\",\n",
+    "    \"floor_number\",\n",
+    "    \"has_elevator\",\n",
+    "    \"past_avg_hours\",\n",
+    "    \"past_avg_crew_size\",\n",
+    "]\n",
+    "\n",
+    "target_cols = [\"crew_size\", \"hours_required\"]\n",
+    "\n",
+    "X = df[feature_cols].copy()\n",
+    "y = df[target_cols].copy()\n",
+    "\n",
+    "X[\"has_elevator\"] = X[\"has_elevator\"].astype(int)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X,\n",
+    "    y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True,\n",
+    ")\n",
+    "\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape\n"
    ]
   }
  ],
