--- a/notebooks/01_data_simulation.ipynb
+++ b/notebooks/01_data_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8c16914a",
    "metadata": {},
    "outputs": [
@@ -24,12 +24,12 @@
     }
    ],
    "source": [
-    "!pip install pandas numpy scikit-learn"
+    "%pip install pandas numpy scikit-learn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6e9961b1",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,20 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import sys\n",
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "BASE_DIR = Path(\"..\").resolve()\n",
+    "sys.path.append(str(BASE_DIR))\n",
     "DATA_DIR = BASE_DIR / \"data\"\n",
-    "\n",
-    "DATA_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
+    "from utils.features import BASE_FEATURES, add_engineered_features\n",
     "print(\"Base dir:\", BASE_DIR)\n",
     "print(\"Data dir:\", DATA_DIR)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b595d362",
    "metadata": {},
    "outputs": [],
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f7bbe6a9",
    "metadata": {},
    "outputs": [
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "4bfe5979",
    "metadata": {},
    "outputs": [
@@ -233,7 +232,7 @@
        "((4000, 9), (1000, 9), (4000, 2), (1000, 2))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,6 +268,193 @@
     ")\n",
     "\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "94440db0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_fe shape: (4000, 14)\n",
+      "X_test_fe shape: (1000, 14)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_size_sqft</th>\n",
+       "      <th>num_rooms</th>\n",
+       "      <th>num_heavy_items</th>\n",
+       "      <th>num_light_items</th>\n",
+       "      <th>distance_km</th>\n",
+       "      <th>floor_number</th>\n",
+       "      <th>has_elevator</th>\n",
+       "      <th>past_avg_hours</th>\n",
+       "      <th>past_avg_crew_size</th>\n",
+       "      <th>heavy_items_per_room</th>\n",
+       "      <th>light_items_per_room</th>\n",
+       "      <th>sqft_per_room</th>\n",
+       "      <th>floor_penalty</th>\n",
+       "      <th>elevator_relief</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4227</th>\n",
+       "      <td>2261</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5.985698</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2.585265</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>376.833333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4676</th>\n",
+       "      <td>2077</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6.204235</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.555932</td>\n",
+       "      <td>1.508370</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>415.400000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>800</th>\n",
+       "      <td>338</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.411652</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.864400</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>169.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3671</th>\n",
+       "      <td>604</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12.117298</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.713430</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>302.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4193</th>\n",
+       "      <td>424</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5.761930</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.522349</td>\n",
+       "      <td>2.654865</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>141.333333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      job_size_sqft  num_rooms  num_heavy_items  num_light_items  distance_km  \\\n",
+       "4227           2261          5                8               21     5.985698   \n",
+       "4676           2077          4                5               20     6.204235   \n",
+       "800             338          1                0                5     3.411652   \n",
+       "3671            604          1                0                5    12.117298   \n",
+       "4193            424          2                1                7     5.761930   \n",
+       "\n",
+       "      floor_number  has_elevator  past_avg_hours  past_avg_crew_size  \\\n",
+       "4227             0             0        1.500000            2.585265   \n",
+       "4676             3             1        1.555932            1.508370   \n",
+       "800              6             1        1.500000            1.864400   \n",
+       "3671             1             0        1.500000            1.713430   \n",
+       "4193             5             1        1.522349            2.654865   \n",
+       "\n",
+       "      heavy_items_per_room  light_items_per_room  sqft_per_room  \\\n",
+       "4227              1.333333              3.500000     376.833333   \n",
+       "4676              1.000000              4.000000     415.400000   \n",
+       "800               0.000000              2.500000     169.000000   \n",
+       "3671              0.000000              2.500000     302.000000   \n",
+       "4193              0.333333              2.333333     141.333333   \n",
+       "\n",
+       "      floor_penalty  elevator_relief  \n",
+       "4227              0                0  \n",
+       "4676              1                1  \n",
+       "800               4                4  \n",
+       "3671              0                0  \n",
+       "4193              3                3  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply feature engineering\n",
+    "\n",
+    "X_train_fe = add_engineered_features(X_train)\n",
+    "X_test_fe = add_engineered_features(X_test)\n",
+    "\n",
+    "print(\"X_train_fe shape:\", X_train_fe.shape)\n",
+    "print(\"X_test_fe shape:\", X_test_fe.shape)\n",
+    "X_train_fe.head()\n"
    ]
   }
  ],
